# Fun-Projects

./: .gitignore  LICENSE  MakeFile (R)
Beier-Neely-Algorithm/: CMakeLists.txt  Utility.cpp  Utility.h  main.cpp
Block-Chain/: main.go
Broken-Code/: Enemy.cs  Follow.cs  Friendly.cs  RewriteEnemy.cs
C-Block-Chain-Port/: Blockchain.cpp  Blockchain.h  CMakeLists.txt  FullAdder.h  SHA256.cpp  SHA256.h  main.cpp
Data-Struct-Practice/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  main.cpp
Go-Practice/: main.go
Go-Test/: main.go
Interesting-Code/: BestBuy-RefreshNoBot-12900kf.user.js  Move.cs
MBR-Virus-Windows/: CMakeLists.txt
MBR-test/: main.cpp
Memory-Allocator/: CMakeLists.txt  README  allocator.c  allocator.h  main.c  makefile  reference  test.c
PThread-Library/: CMakeLists.txt  Makefile  README  container  helper.c  helper.h  main.c  mythreads.c  mythreads.h
Project-1/: CMakeLists.txt  StoredWebPages.cpp  StoredWebPages.h  StoredWords.cpp  StoredWords.h  StringIntMap.cpp  StringIntMap.h  Utils.cpp  file.txt
Project-1-Rebuild/: CMakeLists.txt  StoredWords.cpp  StoredWords.h  StringIntMap.h  main.cpp
Ray-Trace-Weekend/: camera.h  hittable.h  ray.h  sphere.h
Rebuilt-Malloc/: allocator.c  allocator.h  main.c
Seam-Carve/: Blur.cpp  Blur.h  CMakeLists.txt  ImageObject.cpp  ImageObject.h  SeamCarving.cpp  SeamCarving.h  graphics.cpp  graphics.h  main.cpp
Search-Engine/: CMakeLists.txt  StoredWebPages.cpp  StoredWebPages.h  StringIntMap.cpp
Simple-Raytracer/: CMakeLists.txt  camera.cpp  camera.h  color.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  material.h  ray.cpp  ray.h  rtweekend.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
SportsBetAI/: manage.py
annotation-interview/: CMakeLists.txt
python-Test/: main.py
(+1768 files in other folders)
